fix: hide gradient on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,15 +29,7 @@
 
     @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
       &::before {
-        width: 50vw;
-      }
-    }
-
-    @supports (-webkit-touch-callout: none) {
-      @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
-        &::before {
-          display: none;
-        }
+        display: none;
       }
     }
   }
